Add a smart bookmark that mimics recent history

--- a/app/defaults/profile/bookmarks.html
+++ b/app/defaults/profile/bookmarks.html
@@ -13,6 +13,7 @@ Do Not Edit! -->
 <DL><p>
     <DT><H3 PERSONAL_TOOLBAR_FOLDER="true" ID="NC:PersonalToolbarFolder">Personal Toolbar Folder</H3>
     <DL><p>
+        <DT><A HREF="place:queryType=0&sort=4&maxResults=15">Recently Visited</A>
         <DT><A HREF="https://github.com/binoc-central/navigator">Borealis GitHub</a>
         <DT><A HREF="http://xref.binaryoutcast.com/navigator/">Borealis XRef</a>
         <DT><A HREF="https://github.com/MoonchildProductions/uxp">UXP Github</a>
